tests/sema/fail/v35_fail_ptr_extern.ep
# COMPILE_FAIL_CONTAINS: ptr cannot take the address of extern Sleep

extern "kernel32.dll" fun Sleep(milliseconds: u32): void

fun main(): void {
    let callback = ptr(Sleep)
}
